classDiagram
    direction TB

    class User {
        id: string
        pictureId: string
        name: string
        email: string
        password: string
        userManagementPermission: boolean 
        productManagementPermission: boolean
        deleted: boolean
    }
    class Product {
        id: string
        name: string
        description: string
        deleted: boolean
    }
    class Member {
        id: string
        role: string
        productId: string
        userId: string
        deleted: boolean
    }
    class Version {
        id: string
        major: number
        minor: number
        patch: number
        userId: string
        productId: string
        baseVersionIds: string[]
        time: string
        description: string
        deleted: boolean
    }
    class Reference {
        type: string
    }
    class Issue {
        id: string
        label: string
        text: string
        state: 'open' | 'closed'
        assigneeIds: string[]
        milestoneId?: string
        userId: string
        productId: string
        time: date
        deleted: boolean
    }
    class Comment {
        id: string
        text: string
        action: 'none' | 'close' | 'reopen'
        userId: string
        issueId: string
        time: string
        deleted: boolean
    }
    class Milestone {
        id: string
        label: string
        start: string
        end: string
        userId: string
        productId: string
        deleted: boolean
    }

    <<Entity>> User
    <<Entity>> Product
    <<Entity>> Member
    <<Entity>> Version
    <<Entity>> Issue
    <<Entity>> Comment
    <<Entity>> Milestone

    

    <<Data>> Reference

    User <.. Member : references
    Member --* Product : contains

    Issue "1" *-- "*" Comment : contains
    Product "1" *-- "*" Issue : contains

    User "1" <.. "*" Product : created by
    User "1" <.. "*" Version : created by
    User "1" <.. "*" Issue : created by
    User "1" <.. "*" Comment : created by
    User "1" <.. "*" Milestone : created by
    
    Product "1" *-- "*" Version : contains
    Product "1" *-- "*" Milestone : contains
    
   
    Version "1" ..> "*" Version : references
    Version "*" *-- "*" Reference : contains
 
    
    Issue "*" ..> "0..1" Milestone : assigned to
    Issue "*" ..> "0..1" User : assigned to
    Issue "*" *-- "*" Reference : contains
    Comment "*" *-- "*" Reference : contains

    Reference <|-- TextReference: inherits
    Reference <|-- NodeReference: inherits
    Reference <|-- AreaReference: inherits
    Reference <|-- TimeReference: inherits
    Reference <|-- CompositeReference: inherits
    Reference "*" --* "0..1" CompositeReference: contains

    class TextReference {
        fromChar: int
        toChar: int
    }
    class NodeReference {
        path: string
    }
    class AreaReference {
        x1, y1, z1: int
        x2, y2, z2: int
    }
    class TimeReference {
        fromTime: long
        toTime: long
    }
    class CompositeReference {

    }

    <<Data>> TextReference
    <<Data>> NodeReference
    <<Data>> AreaReference
    <<Data>> TimeReference
    <<Data>> CompositeReference